[project]
name = "nova-toll-budget-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.53",
]

[dependency-groups]
dev = ["ruff", "pyright", "pytest"]

[tool.pyright]
# infra/build/ holds vendored deps (psycopg) assembled into the Lambda zip by
# scripts/build_zips.sh — not our code, and gitignored. Don't type-check it.
exclude = ["**/node_modules", "**/__pycache__", ".venv", "infra/build"]

[tool.ruff]
extend-exclude = ["infra/build"]
