[project]
name = "nova-toll-budget-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.53",
]

[dependency-groups]
dev = ["ruff", "pyright", "pytest"]

[tool.pyright]
# infra/build/ holds vendored deps (psycopg) assembled into the Lambda zip by
# scripts/build_zips.sh — not our code, and gitignored. Don't type-check it.
exclude = ["**/node_modules", "**/__pycache__", ".venv", "infra/build"]

# tests/test_graph.py reuses the loader's parse_csv/parse_xml (flat modules,
# no package __init__) via a sys.path insert in tests/conftest.py; pyright
# can't see that at static-analysis time. Scoped to tests/ only -- adding
# lambdas/loader globally would make bare `import handler` in
# lambdas/fetcher/tests resolve against lambdas/loader/handler.py instead
# (the exact collision lambdas/loader/tests/conftest.py's own comment warns
# about).
[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["lambdas/loader"]

[[tool.pyright.executionEnvironments]]
root = "."

[tool.ruff]
extend-exclude = ["infra/build"]
